--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,8 @@ nav{
 }
 .checkbox-status{
 	display: block;
-	margin-bottom: 5px;
+	float: left;
+	margin-top: 6px;
 }
 .task-img{
 	margin-bottom: 10px;
@@ -57,4 +58,13 @@ a[disabled] {
     pointer-events: none;
 	background-color: #f5f5f5;
 	color: #868A87;
+}
+.status-info {
+	margin-top: 15px;
+}
+.status-text {
+
+	font-size: 12px;
+	color: #868A87;
+	margin-left: 10px;
 }
